--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,4 +127,28 @@
   <data name="drinksMenuPhoto" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\drinksMenuPhoto.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="burgerFoodMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BN-NJ737_burger_M_20160404133910.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="beerDrinkMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\banner-buying-guide-beer-glassware-1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cakeDessertMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\a-slice-of-cake-and-ice-cream.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pizzaFoodMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\5218c6_6450b4193d1f4285b0782bb4d1d90dce~mv2.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="saladFoodMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Salad_platter02_crop.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sodaDrinkMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\528988543557.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="souffleDessertMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\064bd8d6006c46529ec729cf45cd335e.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="waterDrinkMenu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\water-quality-banner.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
